--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "1.0.0",
   "main": "./src/App.js",
   "private": false,
-  "license": "MIT",
-  "author": "Cemil Tan",
+  "license": "",
+  "author": "Alif",
   "description": "A React Native chat application using Expo, Firebase.",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Ctere1/nexchat.git"
+    "url": "https://github.com/mdhralif/nexchat.git"
   },
   "keywords": [
     "react-native",
