--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nexchat",
   "version": "1.0.0",
-  "main": "./src/App.js",
+  "main": "./App.js",
   "private": false,
   "license": "",
   "author": "Alif",
@@ -36,7 +36,7 @@
     "@react-navigation/stack": "^6.3.29",
     "babel-plugin-module-resolver": "^5.0.2",
     "dotenv": "^16.4.7",
-    "expo": "^53.0.20",
+    "expo": "53.0.22",
     "expo-av": "~15.1.7",
     "expo-constants": "~17.1.7",
     "expo-crypto": "~14.1.5",
@@ -60,7 +60,9 @@
     "react-native-uuid": "^2.0.3",
     "react-native-web": "^0.20.0",
     "react-native-webview": "13.13.5",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "expo-updates": "~0.28.17",
+    "expo-dev-client": "~5.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.28.0",
